branches/zip: Fix bug# 36172. The zip code changes a precondition that a page must be big enough to store two records, this is done because compression later may very well result in two records residing on the same page. This change handles the case where only one record fits on a page. We don't split the page in the middle by default if there is only record on the page. We only split the page if the tuple to be inserted is less than existing record. That way the existing record is copied over to the right page during the split and the new tuple is inserted to the left.